tests/ui/iterators/integral.stderr
error[E0277]: the trait `IntoIterator` is not implemented for `{integer}`
  --> $DIR/integral.rs:2:14
   |
LL |     for _ in 42 {}
   |              ^^ the trait `IntoIterator` is not implemented for `{integer}`, which is required by `{integer}: IntoIterator`
   |
   = note: required for `{integer}` to implement `IntoIterator`

error[E0277]: the trait `IntoIterator` is not implemented for `u8`
  --> $DIR/integral.rs:4:14
   |
LL |     for _ in 42 as u8 {}
   |              ^^^^^^^^ the trait `IntoIterator` is not implemented for `u8`, which is required by `u8: IntoIterator`
   |
   = note: required for `u8` to implement `IntoIterator`

error[E0277]: the trait `IntoIterator` is not implemented for `i8`
  --> $DIR/integral.rs:6:14
   |
LL |     for _ in 42 as i8 {}
   |              ^^^^^^^^ the trait `IntoIterator` is not implemented for `i8`, which is required by `i8: IntoIterator`
   |
   = note: required for `i8` to implement `IntoIterator`

error[E0277]: the trait `IntoIterator` is not implemented for `u16`
  --> $DIR/integral.rs:8:14
   |
LL |     for _ in 42 as u16 {}
   |              ^^^^^^^^^ the trait `IntoIterator` is not implemented for `u16`, which is required by `u16: IntoIterator`
   |
   = note: required for `u16` to implement `IntoIterator`

error[E0277]: the trait `IntoIterator` is not implemented for `i16`
  --> $DIR/integral.rs:10:14
   |
LL |     for _ in 42 as i16 {}
   |              ^^^^^^^^^ the trait `IntoIterator` is not implemented for `i16`, which is required by `i16: IntoIterator`
   |
   = note: required for `i16` to implement `IntoIterator`

error[E0277]: the trait `IntoIterator` is not implemented for `u32`
  --> $DIR/integral.rs:12:14
   |
LL |     for _ in 42 as u32 {}
   |              ^^^^^^^^^ the trait `IntoIterator` is not implemented for `u32`, which is required by `u32: IntoIterator`
   |
   = note: required for `u32` to implement `IntoIterator`

error[E0277]: the trait `IntoIterator` is not implemented for `i32`
  --> $DIR/integral.rs:14:14
   |
LL |     for _ in 42 as i32 {}
   |              ^^^^^^^^^ the trait `IntoIterator` is not implemented for `i32`, which is required by `i32: IntoIterator`
   |
   = note: required for `i32` to implement `IntoIterator`

error[E0277]: the trait `IntoIterator` is not implemented for `u64`
  --> $DIR/integral.rs:16:14
   |
LL |     for _ in 42 as u64 {}
   |              ^^^^^^^^^ the trait `IntoIterator` is not implemented for `u64`, which is required by `u64: IntoIterator`
   |
   = note: required for `u64` to implement `IntoIterator`

error[E0277]: the trait `IntoIterator` is not implemented for `i64`
  --> $DIR/integral.rs:18:14
   |
LL |     for _ in 42 as i64 {}
   |              ^^^^^^^^^ the trait `IntoIterator` is not implemented for `i64`, which is required by `i64: IntoIterator`
   |
   = note: required for `i64` to implement `IntoIterator`

error[E0277]: the trait `IntoIterator` is not implemented for `usize`
  --> $DIR/integral.rs:20:14
   |
LL |     for _ in 42 as usize {}
   |              ^^^^^^^^^^^ the trait `IntoIterator` is not implemented for `usize`, which is required by `usize: IntoIterator`
   |
   = note: required for `usize` to implement `IntoIterator`

error[E0277]: the trait `IntoIterator` is not implemented for `isize`
  --> $DIR/integral.rs:22:14
   |
LL |     for _ in 42 as isize {}
   |              ^^^^^^^^^^^ the trait `IntoIterator` is not implemented for `isize`, which is required by `isize: IntoIterator`
   |
   = note: required for `isize` to implement `IntoIterator`

error[E0277]: the trait `IntoIterator` is not implemented for `{float}`
  --> $DIR/integral.rs:24:14
   |
LL |     for _ in 42.0 {}
   |              ^^^^ the trait `IntoIterator` is not implemented for `{float}`, which is required by `{float}: IntoIterator`
   |
   = note: required for `{float}` to implement `IntoIterator`

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0277`.
